# swaymenu

./: Cargo.toml  LICENSE  README.md  build.rs
gtk-ui/: MainWindow.ui  gresource.xml  main_ui.xml  style.css
scripts/: start_vm.sh  swayidle.sh
src/: main.rs
src/custom_widgets/: imp.rs  mod.rs
src/window/: imp.rs  mod.rs
