[package]
name = "swaymenu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "0.16.2"
gtk = { version = "*", package = "gtk4" }
gdk = { git = "https://github.com/gtk-rs/gtk3-rs.git", package = "gdk" }

[build-dependencies]
glib-build-tools = "0.16.0"
